; ModuleID = '/home/carl/AnghaBench/vlc/modules/access/dvb/extr_scan.c_decode_BCD.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/access/dvb/extr_scan.c_decode_BCD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @decode_BCD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_BCD(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i16, align 2
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %3, align 4
  store i16 28, i16* %4, align 2
  br label %5

5:                                                ; preds = %19, %1
  %6 = load i16, i16* %4, align 2
  %7 = sext i16 %6 to i32
  %8 = icmp sge i32 %7, 0
  br i1 %8, label %9, label %24

9:                                                ; preds = %5
  %10 = load i32, i32* %3, align 4
  %11 = mul nsw i32 %10, 10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %2, align 4
  %13 = load i16, i16* %4, align 2
  %14 = sext i16 %13 to i32
  %15 = ashr i32 %12, %14
  %16 = and i32 %15, 15
  %17 = load i32, i32* %3, align 4
  %18 = add nsw i32 %17, %16
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %9
  %20 = load i16, i16* %4, align 2
  %21 = sext i16 %20 to i32
  %22 = sub nsw i32 %21, 4
  %23 = trunc i32 %22 to i16
  store i16 %23, i16* %4, align 2
  br label %5

24:                                               ; preds = %5
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
